Adding spotify api experiment. Updating author in package.json.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "openshift"
   ],
   "author": {
-    "name": "OpenShift",
-    "email": "ramr@example.org",
+    "name": "Aditya Ghosh",
+    "email": "ghosh.ad@husky.neu.edu",
     "url": "http://www.openshift.com/"
   },
   "homepage": "http://www.openshift.com/",
