--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "body-parser": "^1.15.0",
     "express": "^3.4.8",
     "multer": "^1.1.0",
-    "node-uuid": "^1.4.7"
+    "node-uuid": "^1.4.7",
+    "socket.io": "^1.4.5"
   },
   "devDependencies": {},
   "bundleDependencies": [],
