--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "OpenShift-Sample-App",
+  "name": "webdev2016",
   "version": "1.0.0",
   "description": "OpenShift Sample Application",
   "keywords": [
