--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^3.4.8",
     "mongoose": "^4.4.10",
     "multer": "^1.1.0",
+    "node-soundcloud": "0.0.5",
     "node-uuid": "^1.4.7",
     "q": "^1.4.1",
     "socket.io": "^1.4.5"
