--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "node-uuid": "^1.4.7",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "passport-soundcloud": "^0.1.2",
     "q": "^1.4.1",
     "socket.io": "^1.4.5"
   },
